# Property2

./: .gitignore  Algorithms.h  CMakeLists.txt  EnumInfo.cpp  EnumInfo.h  FileFunctions.cpp  FileFunctions.h  GlobalCustom.cpp  GlobalCustom.h  History.cpp  History.h  Progress.cpp  Progress.h  PropertyClass.cpp  PropertyClass.h  PropertyClass.hpp  PropertyEditor.cpp  PropertyEditor.h  Result.cpp  Result.h  Serialization.cpp  Serialization.h  Types.h  Variable.cpp  Variable.h
tests/: AlgorithmsTest.cpp  PropertyEditorTest.cpp  PropertyTest.cpp  TestCasePropertyClass.cpp  TestCasePropertyClass.h  VariableTest.cpp
